@@ -17,6 +17,7 @@
     * 4257 logwatch.groups: now allows regular expressions within include and exclude patterns each beginning with a tilde
     * 4013 Ruckus Spot / ruckus_spot_locations: new check to monitor the number of unqiue MACs addresses...
     * 4293 wut_webtherm: now detects devices which support WebGraphThermoBaro-MIB
+    * 4296 mssql_databases: new check which monitors the auto close and shrink state of MSSQL databases...
     * 4171 FIX: perle_psmu: fixed value error...
     * 4172 FIX: smart.temp: fixed discovery and check function...
     * 4173 FIX: if.include: ignore some more keys in 'Network interfaces and switch ports' rule which are only used for interface grouping
